src/snapshots/rlox__test_runtime__nested_scope.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            var a = 1;\n            {\n                var b = 2;\n                print a;\n                print b;\n            }\n            print a;\n        }\n        \")"
---
stdout:
1
2
1


stderr:


