src/snapshots/rlox__test_runtime__nested_while_loops.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 0;\n        while a < 3 {\n            var b = 3;\n            while b > 0 {\n                print b;\n                b = b - 1;\n            }\n            print a;\n            a = a + 1;\n        }\n        \")"
---
stdout:
3
2
1
0
3
2
1
1
3
2
1
2


stderr:


