src/snapshots/rlox__test_runtime__nil_return_and_other_operator.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun ni() {}\n        print ni() or ni();\n        \")"
---
stdout:
nil


stderr:


