src/snapshots/rlox__test_runtime__non_returning_end.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun foo() {\n            if false {\n                return 1;\n            }\n        }\n\n        print foo();\n        \")"
---
stdout:
nil


stderr:


