src/snapshots/rlox__test_runtime__object_equality.snap
---
source: src/main.rs
expression: "crate::common::test_util::mock_interpret(\"\n        print clock == clock;\n        fun foo() {}\n        print foo == foo;\n        fun bar() {}\n        print foo != bar;\n        print foo != clock;\n        print foo != 1;\n        \")"
---
stdout:
true
true
true
true
true


stderr:


