src/snapshots/rlox__test_runtime__one.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 1;\")"
---
stdout:
1


stderr:


