src/snapshots/rlox__test_runtime__or_condition.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        if false or (a = 1) {\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
1
1


stderr:


