src/snapshots/rlox__test_runtime__or_short_circuit.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        if true or (a = 1) {\n            print a;\n        }\n        \")"
---
stdout:
nil


stderr:


