src/snapshots/rlox__test_runtime__parens_ok.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if (true) {\n            print 1;\n        }\n        \")"
---
stdout:
1


stderr:


