src/snapshots/rlox__test_runtime__point_one.snap
---
source: src/vm.rs
expression: "crate::util::mock_interpret(\"print 0.1;\")"
---
stdout:
0.1


stderr:


